add archive implementation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,9 @@
 		"**/*.csproj": true,
 		"**/.gitignore": true,
 		"**/PaySmartly.sln": true
-	}
+	},
+	"cSpell.words": [
+		"HATEOAS",
+		"Protobuf"
+	]
 }
