--- a/PaySmartly.Archive/appsettings.json
+++ b/PaySmartly.Archive/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GrpcClients": {
+    "Persistance": {
+      "Url": "http://localhost:9087"
+    }
+  }
 }
