--- a/PaySmartly.Archive/appsettings.json
+++ b/PaySmartly.Archive/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "GrpcClients": {
-    "Persistance": {
+    "Persistence": {
       "Url": "http://localhost:9087"
     }
   }
